# Simple-ATM

./: .gitignore  HEROKU_DEPLOYMENT.md  README.md  docker-compose.yaml
.github/workflows/: deploy.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/db/: creation.py
backend/app/routers/: accounts.py
backend/app/schemas/: account.py
backend/data/: atm.db
backend/tests/unit/: conftest.py  test_deposit_and_balance.py
frontend/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.tsx  api.ts
frontend/src/components/: AccountForm.tsx  BalanceDisplay.tsx  ErrorAlert.tsx
